--- a/css/titulos.css
+++ b/css/titulos.css
@@ -3,3 +3,9 @@
      font-family: sans-serif;
      text-align: center;
  }
+ 
+ h4 {
+     color: dimgray;
+     font-family: sans-serif;
+     text-align: center;
+ }
