--- a/css/dise.css
+++ b/css/dise.css
@@ -43,9 +43,9 @@ h2 {
     font-size: 20px;
 }
 
-div.container {
-    margin-top: 150px;
-    margin-bottom: 100px;
+div.container1 {
+    margin-top: 80px;
+    margin-bottom: 80px;
     margin-right: 100px;
     margin-left: 80px;
 }
